bindata/network/network-metrics/002-prometheus.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
    service.alpha.openshift.io/serving-cert-secret-name: metrics-daemon-secret
  labels:
    service: network-metrics-service
  name: network-metrics-service
  namespace: openshift-multus
spec:
  selector:
    app: network-metrics-daemon
  clusterIP: None
  ports:
    - name: metrics
      port: 8443
      targetPort: https
  type: ClusterIP
